# KNcraft

./: ARCHITECTURE.md  CMakeLists.txt  CODING_STYLE.md  README.md  grass.json
assets/shaders/: basic.glsl
include/: app.h  buffer.h  camera.h  chunk.h  chunk_manager.h  debug.h  ibo.h  input.h  mesh.h  renderer.h  shader.h  texture.h  vao.h  vbo.h  vertex.h  window.h
src/: app.cpp  buffer.cpp  camera.cpp  chunk.cpp  chunk_manager.cpp  ibo.cpp  input.cpp  main.cpp  mesh.cpp  renderer.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp  window.cpp
src/app/: app.cpp  app.h
src/core/: debug.h
src/core/error/: error_func.cpp  error_func.h  error_list.cpp  error_list.h  error_macro.h
src/core/memory/: memory.h
src/input/: keyboard.h  mouse.h
src/main/: main.cpp
src/platform/: window.cpp  window.h
src/render/: camera.cpp  camera.h  ibo.cpp  ibo.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/scene/: chunk.cpp  chunk.h
src/system/render/: camera.cpp  ibo.cpp  ibo.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  vao.cpp  vbo.cpp  vbo.h
src/system/window/: window.cpp
